metabase/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabase
  labels:
    app: metabase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metabase
  template:
    metadata:
      generateName: metabase
      labels:
        app: metabase
    spec:
      restartPolicy: Always
      containers:
        - name: metabase
          image: metabase/metabase
          imagePullPolicy: "IfNotPresent"
          ports:
            - name: metabase
              containerPort: 3000
