metabase/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: metabase-svc
  labels:
    app: metabase-svc
spec:
  ports:
  - port: 3000
    name: metabase 
    targetPort: 3000
  selector:
    app: metabase
